--- a/player.html
+++ b/player.html
@@ -110,35 +110,35 @@
                 </a>    
             </div>
             <div class="grid-item">
-                <a href="">
+                <a href="./player/pitcher.html#chapman" target="_blank">
                 <div><img src="./img/chapman.jpeg"></div>
                 <div><span>RP #45</span></div>
                 <div><span>Aroldis Chapman</span></div>
                 </a>    
             </div>
             <div class="grid-item">
-                <a href="">
+                <a href="./player/pitcher.html#leclerc" target="_blank">
                 <div><img src="./img/leclerc.jpeg"></div>
                 <div><span>RP #25</span></div>
                 <div><span>José Leclerc</span></div>
                 </a>    
             </div>
             <div class="grid-item">
-                <a href="">
+                <a href="#">
                 <div><img src="./img/chris.jpeg"></div>
                 <div><span>RP #35</span></div>
                 <div><span>Chris Stratton</span></div>
                 </a>    
             </div>
             <div class="grid-item">
-                <a href="">
+                <a href="#">
                 <div><img src="./img/will.jpeg"></div>
                 <div><span>RP #51</span></div>
                 <div><span>Will Smith</span></div>
                 </a>    
             </div>
             <div class="grid-item">
-                <a href="">
+                <a href="./player/pitcher.html#brock" target="_blank">
                 <div><img src="./img/burke.jpeg"></div>
                 <div><span>RP #46</span></div>
                 <div><span>Brock Burke</span></div>
