--- a/player/pitcher.html
+++ b/player/pitcher.html
@@ -40,7 +40,7 @@
             <p>Max Scherzer #31</p>
           </div>
           <div class="p-data">
-            <p> 投手 | 右投右打 | 208公分 | 39歲</p>
+            <p> 投手 | 右投右打 | 190公分 | 39歲</p>
           </div>
         </div>
       </div>
@@ -130,7 +130,7 @@
             <p>Nathan Eovaldi #17</p>
           </div>
           <div class="p-data">
-            <p> 投手 | 右投右打 | 217公分 | 33歲</p>
+            <p> 投手 | 右投右打 | 188公分 | 33歲</p>
           </div>
         </div>
       </div>
@@ -220,7 +220,7 @@
             <p>Jordan Montgomery #52</p>
           </div>
           <div class="p-data">
-            <p> 投手 | 左投左打 | 228公分 | 30歲</p>
+            <p> 投手 | 左投左打 | 198公分 | 30歲</p>
           </div>
         </div>
       </div>
@@ -310,7 +310,7 @@
             <p>Andrew Heaney #44</p>
           </div>
           <div class="p-data">
-            <p> 投手 | 左投左打 | 200公分 | 32歲</p>
+            <p> 投手 | 左投左打 | 188公分 | 32歲</p>
           </div>
         </div>
       </div>
@@ -400,7 +400,7 @@
             <p>Cody Bradford #61</p>
           </div>
           <div class="p-data">
-            <p> 投手 | 左投左打 | 197公分 | 25歲</p>
+            <p> 投手 | 左投左打 | 193公分 | 25歲</p>
           </div>
         </div>
       </div>
@@ -490,7 +490,7 @@
             <p>Dane Dunning #33</p>
           </div>
           <div class="p-data">
-            <p> 投手 | 右投右打 | 225公分 | 28歲</p>
+            <p> 投手 | 右投右打 | 193公分 | 28歲</p>
           </div>
         </div>
       </div>
@@ -580,7 +580,7 @@
             <p>Jon Gray #22</p>
           </div>
           <div class="p-data">
-            <p> 投手 | 右投右打 | 225公分 | 32歲</p>
+            <p> 投手 | 右投右打 | 193公分 | 32歲</p>
           </div>
         </div>
       </div>
@@ -670,7 +670,7 @@
             <p>Martín Pérez #54</p>
           </div>
           <div class="p-data">
-            <p> 投手 | 左投左打 | 200公分 | 32歲</p>
+            <p> 投手 | 左投左打 | 183公分 | 32歲</p>
           </div>
         </div>
       </div>
@@ -760,7 +760,7 @@
             <p>Josh Sborz #66</p>
           </div>
           <div class="p-data">
-            <p> 投手 | 右投右打 | 215公分 | 29歲</p>
+            <p> 投手 | 右投右打 | 191公分 | 29歲</p>
           </div>
         </div>
       </div>
@@ -859,11 +859,11 @@
         <div id="corey-bio">
           <ul>
             <li><span class="liTitle">個人資料</span></li>
-            <!-- <li><span class="liTitle">綽號: </span><span class="liContent">El De Las Matas</span></li> -->
-            <li><span class="liTitle">出生於: </span> <span class="liContent">1993.12.17, Washington, DC</span></li>
-            <li><span class="liTitle">選秀: </span><span class="liContent">2015年第CB-B輪74順位, Los Angeles Dodgers</span></li>
-            <li><span class="liTitle">大學: </span><span class="liContent">Virginia</span></li>
-            <li><span class="liTitle">初次登場: </span><span class="liContent">2019.6.20</span></li>
+            <li><span class="liTitle">綽號: </span><span class="liContent">The Missile</span></li>
+            <li><span class="liTitle">出生於: </span> <span class="liContent">1988.2.28, Holguin, Cuba</span></li>
+            <!-- <li><span class="liTitle">選秀: </span><span class="liContent">2015年第CB-B輪74順位, Los Angeles Dodgers</span></li> -->
+            <!-- <li><span class="liTitle">大學: </span><span class="liContent">Virginia</span></li> -->
+            <li><span class="liTitle">初次登場: </span><span class="liContent">2010.8.31</span></li>
           </ul>
         </div>
 
@@ -885,13 +885,13 @@
               <td>2023季後賽</td>
               <td>0</td>
               <td>0</td>
-              <td>0.75</td>
-              <td>10</td>
+              <td>2.25</td>
+              <td>9</td>
               <td>0</td>
-              <td>1</td>
-              <td>12.0</td>
-              <td>13</td>
-              <td>0.67</td>
+              <td>0</td>
+              <td>8.0</td>
+              <td>6</td>
+              <td>1.50</td>
             </tr>
             <tr> 
               <td>生涯季後賽</td>
@@ -900,34 +900,214 @@
               <td>0.75</td>
               <td>10</td>
               <td>0</td>
-              <td>1</td>
-              <td>12.0</td>
-              <td>13</td>
-              <td>0.67</td>
+              <td>10</td>
+              <td>49.1</td>
+              <td>68</td>
+              <td>1.14</td>
             </tr>
-            <tr>  
+            <tr>   
               <td>2023例行賽</td>
               <td>6</td>
-              <td>7</td>
-              <td>5.50</td>
-              <td>44</td>
+              <td>5</td>
+              <td>3.09</td>
+              <td>61</td>
               <td>0</td>
-              <td>0</td>
-              <td>52.1</td>
-              <td>66</td>
-              <td>1.15</td>
+              <td>6</td>
+              <td>58.1</td>
+              <td>103</td>
+              <td>1.25</td>
             </tr>
             <tr>  
               <td>生涯例行賽</td>
-              <td>11</td>
-              <td>11</td>
-              <td>5.08</td>
-              <td>137</td>
+              <td>50</td>
+              <td>40</td>
+              <td>2.53</td>
+              <td>728</td>
+              <td>0</td>
+              <td>321</td>
+              <td>698.1</td>
+              <td>1148</td>
+              <td>1.08</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
+
+    <div class="infield">
+      <div id="leclerc">
+        <div>
+          <div class="p-name">
+            <p>José Leclerc #25</p>
+          </div>
+          <div class="p-data">
+            <p> 投手 | 右投右打 | 183公分 | 29歲</p>
+          </div>
+        </div>
+      </div>
+      <div id="corey-b">
+        <div id="corey-bio">
+          <ul>
+            <li><span class="liTitle">個人資料</span></li>
+            <li><span class="liTitle">綽號: </span><span class="liContent">Pico</span></li>
+            <li><span class="liTitle">出生於: </span> <span class="liContent">1993.12.19, Esperanza, Dominican Republic</span></li>
+            <!-- <li><span class="liTitle">選秀: </span><span class="liContent">2015年第CB-B輪74順位, Los Angeles Dodgers</span></li> -->
+            <!-- <li><span class="liTitle">大學: </span><span class="liContent">Virginia</span></li> -->
+            <li><span class="liTitle">初次登場: </span><span class="liContent">2016.7.06</span></li>
+          </ul>
+        </div>
+
+        <div class="column">
+          <table>
+            <tr>
+              <th>年</th>
+              <th>勝</th>
+              <th>敗</th>
+              <th>防禦率</th>
+              <th>出賽</th>
+              <th>先發</th>
+              <th>救援</th>
+              <th>局數</th>
+              <th>三振</th>
+              <th>每局被上壘率</th>
+            </tr>
+            <tr>  
+              <td>2023季後賽</td>
               <td>1</td>
               <td>1</td>
-              <td>147.0</td>
-              <td>176</td>
-              <td>1.34</td>
+              <td>3.29</td>
+              <td>13</td>
+              <td>0</td>
+              <td>4</td>
+              <td>13.2</td>
+              <td>14</td>
+              <td>1.10</td>
+            </tr>
+            <tr> 
+              <td>生涯季後賽</td>
+              <td>1</td>
+              <td>1</td>
+              <td>3.29</td>
+              <td>13</td>
+              <td>0</td>
+              <td>4</td>
+              <td>13.2</td>
+              <td>14</td>
+              <td>1.10</td>
+            </tr>
+            <tr>   
+              <td>2023例行賽</td>
+              <td>0</td>
+              <td>2</td>
+              <td>2.68</td>
+              <td>57</td>
+              <td>0</td>
+              <td>4</td>
+              <td>57.0</td>
+              <td>67</td>
+              <td>1.14</td>
+            </tr>
+            <tr>  
+              <td>生涯例行賽</td>
+              <td>6</td>
+              <td>15</td>
+              <td>3.03</td>
+              <td>286</td>
+              <td>3</td>
+              <td>40</td>
+              <td>293.2</td>
+              <td>384</td>
+              <td>1.19</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
+
+    <div class="infield">
+      <div id="brock">
+        <div>
+          <div class="p-name">
+            <p>Brock Burke #46</p>
+          </div>
+          <div class="p-data">
+            <p> 投手 | 左投左打 | 193公分 | 27歲</p>
+          </div>
+        </div>
+      </div>
+      <div id="corey-b">
+        <div id="corey-bio">
+          <ul>
+            <li><span class="liTitle">個人資料</span></li>
+            <!-- <li><span class="liTitle">綽號: </span><span class="liContent">Pico</span></li> -->
+            <li><span class="liTitle">出生於: </span> <span class="liContent">1996.8.04, Chicago, IL</span></li>
+            <li><span class="liTitle">選秀: </span><span class="liContent">2014年第3輪96順位, Los Angeles Dodgers</span></li>
+            <li><span class="liTitle">高中: </span><span class="liContent">Evergreen, Evergreen, CO</span></li>
+            <li><span class="liTitle">初次登場: </span><span class="liContent">2019.8.20</span></li>
+          </ul>
+        </div>
+
+        <div class="column">
+          <table>
+            <tr>
+              <th>年</th>
+              <th>勝</th>
+              <th>敗</th>
+              <th>防禦率</th>
+              <th>出賽</th>
+              <th>先發</th>
+              <th>救援</th>
+              <th>局數</th>
+              <th>三振</th>
+              <th>每局被上壘率</th>
+            </tr>
+            <tr>  
+              <td>2023季後賽</td>
+              <td>0</td>
+              <td>0</td>
+              <td>67.50</td>
+              <td>2</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0.2</td>
+              <td>0</td>
+              <td>7.50</td>
+            </tr>
+            <tr> 
+              <td>生涯季後賽</td>
+              <td>0</td>
+              <td>0</td>
+              <td>67.50</td>
+              <td>2</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0.2</td>
+              <td>0</td>
+              <td>7.50</td>
+            </tr>
+            <tr>   
+              <td>2023例行賽</td>
+              <td>5</td>
+              <td>3</td>
+              <td>4.37</td>
+              <td>53</td>
+              <td>0</td>
+              <td>0</td>
+              <td>59.2</td>
+              <td>52</td>
+              <td>1.22</td>
+            </tr>
+            <tr>  
+              <td>生涯例行賽</td>
+              <td>12</td>
+              <td>10</td>
+              <td>3.68</td>
+              <td>111</td>
+              <td>6</td>
+              <td>0</td>
+              <td>168.2</td>
+              <td>156</td>
+              <td>1.19</td>
             </tr>
           </table>
         </div>
