--- a/player.html
+++ b/player.html
@@ -204,42 +204,42 @@
         <div id="tabs-3">
             <div class="grid-container">
                 <div class="grid-item">
-                    <a href="">
+                    <a href="./player/of.html#adolis" target="_blank">
                     <div><img src="./img/adoli.jpeg"></div>
                     <div><span>RF #53</span></div>
                     <div><span>Adolis García</span></div>
                     </a>    
                 </div>
                 <div class="grid-item">
-                    <a href="">
+                    <a href="./player/of.html#carter" target="_blank">
                     <div><img src="./img/carter.jpeg"></div>
                     <div><span>CF #32</span></div>
                     <div><span>Evan Carter</span></div>
                     </a>    
                 </div>
                 <div class="grid-item">
-                    <a href="">
+                    <a href="./player/of.html#leody" target="_blank">
                     <div><img src="./img/leody.jpeg"></div>
                     <div><span>CF #3</span></div>
                     <div><span>Leody Taveras</span></div>
                     </a>    
                 </div>
                 <div class="grid-item">
-                    <a href="">
+                    <a href="./player/of.html#robbie" target="_blank">
                     <div><img src="./img/robbie.jpeg"></div>
                     <div><span>LF #4</span></div>
                     <div><span>Robbie Grossman</span></div>
                     </a>    
                 </div>
                 <div class="grid-item">
-                    <a href="">
+                    <a href="./player/of.html#janko" target="_blank">
                     <div><img src="./img/janko.jpeg"></div>
                     <div><span>LF #16</span></div>
                     <div><span>Travis Jankowski</span></div>
                     </a>    
                 </div>
                 <div class="grid-item">
-                    <a href="">
+                    <a href="#">
                     <div><img src="./img/dustin.jpeg"></div>
                     <div><span>OF #67</span></div>
                     <div><span>Dustin Harris</span></div>
@@ -265,56 +265,56 @@
                   </a>    
               </div>
               <div class="grid-item">
-                  <a href="">
+                  <a href="#">
                   <div><img src="./img/ecker1.jpeg" id="ecker"></div>
                   <div><span>板凳教練 #14</span></div>
                   <div><span>Donnie Ecker</span></div>
                   </a>    
               </div>
               <div class="grid-item">
-                  <a href="">
+                  <a href="#">
                   <div><img src="./img/tim.jpeg" id="tim"></div>
                   <div><span>打擊教練 #75</span></div>
                   <div><span>Tim Hyers</span></div>
                   </a>    
               </div>
               <div class="grid-item">
-                  <a href="">
+                  <a href="#">
                   <div><img src="./img/maddux1.jpeg" id="maddux"></div>
                   <div><span>投手教練 #31</span></div>
                   <div><span>Mike Maddux</span></div>
                   </a>    
               </div>
               <div class="grid-item">
-                  <a href="">
+                  <a href="#">
                   <div><img src="./img/dn.jpeg"></div>
                   <div><span>助理打擊教練 #86</span></div>
                   <div><span>Seth Conner</span></div>
                   </a>    
               </div>
               <div class="grid-item">
-                  <a href="">
+                  <a href="#">
                   <div><img src="./img/dn.jpeg"></div>
                   <div><span>三壘教練 #27</span></div>
                   <div><span>Tony Beasley</span></div>
                   </a>    
               </div>
               <div class="grid-item">
-                  <a href="">
+                  <a href="#">
                   <div><img src="./img/dn.jpeg"></div>
                   <div><span>一壘教練 #64</span></div>
                   <div><span>Tony Beasley</span></div>
                   </a>    
               </div>
               <div class="grid-item">
-                  <a href="">
+                  <a href="#">
                   <div><img src="./img/dn.jpeg"></div>
                   <div><span>牛棚教練 #87</span></div>
                   <div><span>Brett Hayes</span></div>
                   </a>    
               </div>
               <div class="grid-item">
-                  <a href="">
+                  <a href="#">
                   <div><img src="./img/dn.jpeg"></div>
                   <div><span>守備教練 #88</span></div>
                   <div><span>Bobby Wilson</span></div>
