--- a/main.html
+++ b/main.html
@@ -47,12 +47,18 @@
     </div>
 
     <div class="mySlides">
-      <img src="./img/slide4.jpeg" sty>
+      <img src="./img/slide4.jpeg">
     </div>
 
     <div class="mySlides">
-      <img src="./img/slidey.jpeg" sty>
+      <img src="./img/slidexx.jpeg">
     </div>
+
+    <div class="mySlides">
+      <img src="./img/slidesilver.jpeg">
+    </div>
+
+
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
