11/14 slide pre next

--- a/main.html
+++ b/main.html
@@ -31,6 +31,10 @@
   </div>
   <!-- <br> -->
 <div class="outercontainer">
+   <div id="appad">
+    <img src="./img/mlbad.png">
+  </div>
+  <br><br>
 
   <div class="slideshow-container">
 
@@ -61,18 +65,14 @@
 
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
-
+    
   </div>
   <div style="text-align:center">
     <span class="dot" onclick="currentSlide(1)"></span> 
     <span class="dot" onclick="currentSlide(2)"></span> 
     <span class="dot" onclick="currentSlide(3)"></span> 
   </div>
-
-  <br><br>
-  <div id="appad">
-    <img src="./img/mlbad.png" alt="">
-  </div>
+  
 
   <div id="bracket">
     <h1>2023MLB季後賽</h1>
@@ -195,27 +195,32 @@
             <ul>
               <li>
                   <div class="player rank1">1</div>
-                  <div class="player p-name1"><span>Nathan Eovaldi</span></div>
+                  <a href="./player/pitcher.html#eovaldi"><div class="player p-name1"><span>Nathan Eovaldi</span></div></a>
                   <div class="player num">5</div>
               </li>
               <li>
                   <div class="player rank">2</div>
-                  <div class="player p-name"><span>Jordan Montgomery</span></div>
+                  <a href="./player/pitcher.html#monty"><div class="player p-name"><span>Jordan Montgomery</span></div></a>
                   <div class="player num">3</div>
               </li>
               <li>
                   <div class="player rank">3</div>
-                  <div class="player p-name"><span>Jose Leclerc</span></div>
+                  <a href="./player/pitcher.html#leclerc">
+                    <div class="player p-name"><span>Jose Leclerc</span></div></a>
                   <div class="player num">1</div>
               </li>
               <li>
                   <div class="player rank">4</div>
-                  <div class="player p-name"><span>Andrew Heaney</span></div>
+                  <a href="./player/pitcher.html#heaney">
+                    <div class="player p-name"><span>Andrew Heaney</span></div>
+                  </a>
                   <div class="player num">1</div>
               </li>
               <li>
                   <div class="player rank">5</div>
-                  <div class="player p-name"><span>Dane Dunning </span></div>
+                  <a href="./player/pitcher.html#dunning">
+                    <div class="player p-name"><span>Dane Dunning </span></div>
+                  </a>
                   <div class="player num">1</div>
               </li>
             </ul>
@@ -229,27 +234,37 @@
             <ul>
               <li>
                   <div class="player rank1">1</div>
-                  <div class="player p-name1"><span>Josh Sborz</span></div>
+                  <a href="./player/pitcher.html#sborz">
+                    <div class="player p-name1"><span>Josh Sborz</span></div>
+                  </a>
                   <div class="player num">0.75</div>
               </li>
               <li>
                   <div class="player rank">2</div>
-                  <div class="player p-name"><span>Cody Bradford</span></div>
+                  <a href="./player/pitcher.html#bradford">
+                    <div class="player p-name"><span>Cody Bradford</span></div>
+                  </a>
                   <div class="player num">1.17</div>
               </li>
               <li>
                   <div class="player rank">3</div>
-                  <div class="player p-name"><span>Jon Gray</span></div>
+                  <a href="./player/pitcher.html#jon">
+                    <div class="player p-name"><span>Jon Gray</span></div>
+                  </a>
                   <div class="player num">1.59</div>
               </li>
               <li>
                   <div class="player rank">4</div>
-                  <div class="player p-name"><span>Aroldis Chapman</span></div>
+                  <a href="./player/pitcher.html#chapman">
+                    <div class="player p-name"><span>Aroldis Chapman</span></div>
+                  </a>
                   <div class="player num">2.25</div>
               </li>
               <li>
                   <div class="player rank">5</div>
-                  <div class="player p-name"><span>Jordan Montgomery</span></div>
+                  <a href="./player/pitcher.html#monty">
+                    <div class="player p-name"><span>Jordan Montgomery</span></div>
+                  </a>                 
                   <div class="player num">2.90</div>
               </li>
             </ul>
