--- a/about.html
+++ b/about.html
@@ -13,6 +13,12 @@
 </head>
 
 <body>
+    <div id="mySidenav" class="sidenav">
+        <a href="#intro" id="about">簡介</a>
+        <a href="#part-team" id="blog">奪冠歷程</a>
+        <a href="#top" id="projects">Top</a>
+    </div>
+
     <div id="navabove" style="background-color: #003278;">
         <div id="goandtake">
             <img src="./img/GATI_OnDark.svg">
@@ -40,7 +46,7 @@
             <br>
             <h1 class="inarticle" style="font-size: 2.5em;">德州遊騎兵</h1>
             <br>
-            <h2 class="title-article">簡介</h2>
+            <h2 class="title-article" id="intro">簡介</h2>
             <div class="content inarticle">
                 <p class="space">&nbsp;</p>
                 <p id="content">
@@ -110,7 +116,7 @@
             </div>
 
             <br>
-            <h2 class="title-article">歷史</h2>
+            <h2 class="title-article" id="part-team">奪冠歷程</h2>
             <div class="content inarticle">
                 <p class="space">&nbsp;</p>
                 <p id="content-1">
