--- a/game/game.html
+++ b/game/game.html
@@ -18,6 +18,12 @@
   </div>
 
   <div>
+    <div id="mySidenav" class="sidenav">
+      <a href="#intro" id="about">世界大賽</a>
+      <a href="#alcs" id="blog">美聯冠軍</a>
+      <a href="#top" id="projects">Top</a>
+  </div>
+
     <div class="topnav" id="myTopnav">
       <a id="texlogo" href="../main.html" ><img src="../img/tlogo.svg" alt=""></a>
       <a href="../main.html">首頁</a>
@@ -35,7 +41,7 @@
     <br><br><br>
     <div class="box-container">
       <div class="vstitle">
-        <div class="item item1"><span>世界大賽G1</span></div>
+        <div class="item item1" id="intro"><span>世界大賽G1</span></div>
         <div class="item item2"><span>TEX 1 : 0 AZ</span></div>
       </div>
         <div class="box-bg">
@@ -494,7 +500,7 @@
 
     <div class="box-container">
       <div class="vstitle">
-        <div class="item item1"><span>美聯冠軍賽G1</span></div>
+        <div class="item item1" id="alcs"><span>美聯冠軍賽G1</span></div>
         <div class="item item2"><span>TEX 1 : 0 HOU</span></div>
       </div>
         <div class="box-bg">
