--- a/main.html
+++ b/main.html
@@ -11,11 +11,16 @@
   <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
 </head>
 <body>
+  <div id="mySidenav" class="sidenav">
+    <a href="#top" id="projects">Top</a>
+</div>
+
   <div id="navabove" style="background-color: #003278;">
     <div id="goandtake">
       <img src="./img/GATI_OnDark.svg" >
     </div>
   </div>
+
 
   <div>
     <div class="topnav" id="myTopnav">
@@ -390,27 +395,37 @@
             <ul>
               <li>
                   <div class="player rank1">1</div>
-                  <div class="player p-name1"><span>Travis Jankowski</span></div>
+                  <a href="./player/of.html#janko">
+                    <div class="player p-name1"><span>Travis Jankowski</span></div>
+                  </a>
                   <div class="player num">.333</div>
               </li>
               <li>
                   <div class="player rank">2</div>
-                  <div class="player p-name"><span>Adolis Garcia</span></div>
+                  <a href="./player/of.html#adolis">
+                    <div class="player p-name"><span>Adolis Garcia</span></div>
+                  </a>
                   <div class="player num">.323</div>
               </li>
               <li>
                   <div class="player rank">3</div>
-                  <div class="player p-name"><span>Corey Seager</span></div>
+                  <a href="./player/infield.html#corey">
+                    <div class="player p-name"><span>Corey Seager</span></div>
+                  </a>                 
                   <div class="player num">.318</div>
               </li>
               <li>
                   <div class="player rank">4</div>
-                  <div class="player p-name"><span>Josh Jung</span></div>
+                  <a href="./player/infield.html#jung">
+                    <div class="player p-name"><span>Josh Jung</span></div>
+                  </a>                  
                   <div class="player num">.308</div>
               </li>
               <li>
                   <div class="player rank">5</div>
-                  <div class="player p-name"><span>Evan Carter</span></div>
+                  <a href="./player/of.html#carter">
+                    <div class="player p-name"><span>Evan Carter</span></div>
+                  </a>                 
                   <div class="player num">.300</div>
               </li>
             </ul>
@@ -424,27 +439,37 @@
             <ul>
               <li>
                   <div class="player rank1">1</div>
-                  <div class="player p-name1"><span>Corey Seager</span></div>
+                  <a href="./player/infield.html#corey">
+                    <div class="player p-name1"><span>Corey Seager</span></div>
+                  </a>                 
                   <div class="player num">21</div>
               </li>
               <li>
                   <div class="player rank">2</div>
-                  <div class="player p-name"><span>Josh Jung</span></div>
+                  <a href="./player/infield.html#jung">
+                    <div class="player p-name"><span>Josh Jung</span></div>
+                  </a> 
                   <div class="player num">20</div>
               </li>
               <li>
                   <div class="player rank">3</div>
-                  <div class="player p-name"><span>Adolis Garcia</span></div>
+                  <a href="./player/of.html#adolis">
+                    <div class="player p-name"><span>Adolis Garcia</span></div>
+                  </a>
                   <div class="player num">20</div>
               </li>
               <li>
                   <div class="player rank">4</div>
-                  <div class="player p-name"><span>Evan Carter</span></div>
+                  <a href="./player/of.html#carter">
+                    <div class="player p-name"><span>Evan Carter</span></div>
+                  </a>                 
                   <div class="player num">18</div>
               </li>
               <li>
                   <div class="player rank">5</div>
-                  <div class="player p-name"><span>Marcus Semien</span></div>
+                  <a href="./player/infield.html#marcus">
+                    <div class="player p-name"><span>Marcus Semien</span></div>
+                  </a>                 
                   <div class="player num">17</div>
               </li>
             </ul>
