--- a/post-season/post-season.html
+++ b/post-season/post-season.html
@@ -13,6 +13,13 @@
 </head>
 
 <body>
+    <div id="mySidenav" class="sidenav">
+        <a href="#intro" id="about">賽制</a>
+        <a href="#part-team" id="blog">球隊</a>
+        <a href="#up" id="projects">晉級表</a>
+        <a href="#fight" id="contact">戰況</a>
+    </div>
+
     <div id="navabove" style="background-color: #003278;">
         <div id="goandtake">
             <img src="../img/GATI_OnDark.svg">
@@ -39,7 +46,7 @@
             <br><br>
             <h1 class="inarticle" style="font-size: 2.5em;">2023年美國職棒大聯盟季後賽</h1>
             <br><br>
-            <h2 class="inarticle">賽制與簡介</h2>
+            <h2 class="inarticle" id="intro">賽制與簡介</h2>
             <div class="content inarticle">
                 <p class="space">&nbsp;</p>
                 <p id="content">
@@ -49,7 +56,7 @@
                 </p>
                 <p class="space">&nbsp;</p>
             </div>
-            <h2 class="inarticle">參與球隊</h2>
+            <h2 class="inarticle" id="part-team">參與球隊</h2>
             <br>
             <div class="team">
                 <div class="empty">&nbsp;</div>
@@ -95,7 +102,7 @@
 
             </div>
             <br>
-            <h2 class="inarticle">晉級表</h2>
+            <h2 class="inarticle" id="up">晉級表</h2>
             <br>
             <div id="bracket-img"><img src="../img/bracket.jpeg"></div>
             <br>
@@ -468,7 +475,7 @@
                     </td></tr></tbody></table>
             </div>
             <br>
-            <h2 class="inarticle">季後賽戰況</h2>
+            <h2 class="inarticle" id="fight">季後賽戰況</h2>
             <br>
             <div class="content inarticle">
                 <p class="space">&nbsp;</p>
@@ -547,4 +554,6 @@
         <div class="bot-bg"><img src="../img/mlbad.png"></div>
 
     </div>
+
+    <script src="post.js"></script>
 </body>
